--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
+  "rewrites": [
+    {
+      "source": "/dashboard",
+      "destination": "/dashboard/index.html"
+    },
+    {
+      "source": "/dashboard/",
+      "destination": "/dashboard/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
