--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/index.js"
+    },
     {
       "source": "/dashboard",
       "destination": "/dashboard/index.html"
