--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "test": "echo 'Tests complete'"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.14",
+    "@solana/web3.js": "^1.98.4",
+    "@vercel/postgres": "^0.10.0",
+    "better-sqlite3": "^12.5.0",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.65.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
