Restructure whale-verify as separate Vercel serverless endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -15,10 +15,6 @@
     {
       "source": "/api/generate-avatar",
       "destination": "/api/generate-avatar.js"
-    },
-    {
-      "source": "/api/whale-verify/:path*",
-      "destination": "/api/whale-verify.js"
     }
   ],
   "functions": {
@@ -30,7 +26,7 @@
       "memory": 1024,
       "maxDuration": 60
     },
-    "api/whale-verify.js": {
+    "api/whale-verify/*.js": {
       "memory": 1024,
       "maxDuration": 30
     }
